decode elf files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CXXFLAGS = $(CXXFLAGS)
 
 bin_PROGRAMS = scanasm
-scanasm_SOURCES = capstone_ctx.h main.cc
+scanasm_SOURCES = main.cc reader.h reader.cc util.h
 scanasm_LDADD = $(CAPSTONE_LIBS)
